# AnalyticsOS

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  AnalyticsOS_Daily_Startup_Guide.txt  CHANGELOG.md  CONTRIBUTING.md  FOUNDING.md  LICENSE  PRODUCT_SPECIFICATION.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
adr/: ADR-001-local-first.md  ADR-002-dashboard-first.md  ADR-003-plugin-first.md  ADR-004-api-first-backend.md  ADR-005-canonical-domain-objects.md  README.md
bootstrap/: README.md  bootstrap.py
configs/: analyticsos.example.json
data/: datasets.json  memories.json  projects.json  prompt_templates.json
docs/: SECOND_BRAIN_SETUP.md  action-builder.md  anythingllm-integration.md  api-smoke-tests.md  backup-restore.md  configuration.md  dashboard-mvp.md  development-windows.md  final-ux.md  index.md  knowledge-indexing.md  mvp-closure-checklist.md  mvp-test-plan.md  smart-system.md  v0.5.0-durable-platform.md
frontend/: .env.local.example  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
knowledge/: welcome.md
requirements/: dev.txt
rfc/: README.md  RFC-000-template.md
scripts/: configure-runtime-paths.ps1  dev-start.ps1  export-backup.ps1  install-frontend-deps.ps1  install-python-deps.ps1  migrate-runtime-data.ps1  migrate-runtime-to-localappdata.ps1  patch-api-runtime-status.ps1  reset-local-data.ps1  run-backend.ps1  run-dev.ps1  run-frontend.ps1  run-quality.ps1  run-smoke-test.ps1  start-analyticsos.ps1  sync-pull.ps1  sync-push.ps1  (+3 more)
(+110 files in other folders)
