[project]
name = "analyticsos"
version = "0.0.2-alpha"
description = "Local-first Professional Intelligence Platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Dheer Lakhotia" }
]
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
pythonpath = ["backend"]
addopts = "-q"
